@@ -4,6 +4,9 @@
 
 # Changelog:
 #
+# Updated: 24 FEB 2025
+# - Preliminary support for Raspberry Pi Desktop (x86)
+#
 # Updated: 17 FEB 2025
 # - Add Pi CM5 4GB code C04180
 
